# MegaLines

./: CMakeLists.txt  LICENSE  README.md  assets.qrc  main.cpp  qml.qrc
bridge/: bridgemain.cpp  bridgemain.hpp  bridgepagegame.cpp  bridgepagegame.hpp  bridgepagetitle.cpp  bridgepagetitle.hpp  formbridgebase.cpp  formbridgebase.hpp  formbridgemanager.cpp  formbridgemanager.hpp
ctl/: gamestoragecontroler.cpp  gamestoragecontroler.hpp  playgroundfieldcontroler.cpp  playgroundfieldcontroler.hpp
model/: playgroundfieldmodel.cpp  playgroundfieldmodel.hpp
objects/: entity.cpp  entity.hpp
qml/: main.qml
qml/page/: PageGame.qml  PageTitle.qml
qml/widgets/: ButtonWidget.qml  RotatingImageWidget.qml
util/: position.hpp
